<resources>
    <string name="app_name">FoodBook</string>
    <string name="search_toolbar">Cerca Ricetta</string>
    <string name="found_recipes">Ricette Trovate</string>
    <string name="recipe_name">Nome della Ricetta</string>
    <string name="primi">Primi</string>
    <string name="secondi">Secondi</string>
    <string name="antipasti">Antipasti</string>
    <string name="dessert">Dessert</string>
    <string name="recipe_info">Informazioni</string>
    <string name="ingredients">Ingredienti</string>
    <string name="preparation">Preparazione</string>
    <string name="foto_del_piatto">Foto del piatto</string>
    <string name="group">Group</string>
    <string name="icona_ricetta_preferita">icona ricetta preferita</string>
    <string name="pictureDialog_title">Aggiungi immagine</string>
    <string name="pictureDialog_galleryOption">Scegli immagine dalla Galleria</string>
    <string name="pictureDialog_cameraOption">Cattura foto dalla Fotocamera</string>
    <string name="fileCreationError">Impossibile creare file!</string>
    <string name="openFileError">Impossibile aprire file!</string>
    <string name="fillAllFieldsError">Compila tutti i campi!</string>
    <string name="atLeastOneIngredientError">Inserisci almeno un ingrediente!</string>
    <string name="atLeastOnePhaseError">Inserisci almeno un passo!</string>
    <string name="cancelInsertRecipe">Annullare l\'inserimento?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="default_text">some text</string>
    <string name="recipe_name_hint">Spaghetti alla carbonara</string>
    <string name="dishType">Portata</string>
    <string name="primo">Primo</string>
    <string name="secondo">Secondo</string>
    <string name="antipasto">Antipasto</string>
    <string name="timeType">Tempo di Preparazione</string>
    <string name="fastTime">Veloce</string>
    <string name="mediumTime">Medio</string>
    <string name="longTime">Lungo</string>
    <string name="ingredients_list">Lista Ingredienti</string>
    <string name="phases_list">Lista Passi</string>
    <string name="ingredient">Ingrediente</string>
    <string name="quantity">Quantità</string>
    <string name="unit">UNITÀ</string>
    <string name="gr">GR</string>
    <string name="ml">ML</string>
    <string name="message_no_recipe_found">Nessuna Ricetta Trovata. Premi il tasto indietro per tornare alla schermata di ricerca.</string>
</resources>
